<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/temperature_textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.9"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/weather_mode_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temperature_textView_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="10dp"

        android:text="@string/partly_cloud"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:drawablePadding="10dp"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.7"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/cloud"
        app:layout_constraintTop_toBottomOf="@id/temperature_textView_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weather_mode_textview_id"
        android:layout_marginEnd="20dp"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weather_mode_textview_id"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />


    <ImageView
        android:id="@+id/_heart_center_img"
        android:layout_width="203dp"
        android:layout_height="173dp"
        android:src="@drawable/logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_mode_textview_id"
        app:layout_constraintVertical_bias="0.115"

        />

    <TextView
        android:id="@+id/digital_heart_kit_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/appKaName"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:layout_width="255dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/splash_description"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digital_heart_kit_txtView"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Last Blood Pressure Record"
            android:textColor="@android:color/black"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/bottom_container_background"
            >
            <TextView
                android:id="@+id/top_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="March,11"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                />
            <View
                android:id="@+id/center_view"
                android:layout_width="3dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_textview"
                android:background="#686868"
                android:paddingTop="15dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/secondlefttop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/center_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/top_textview"
                android:text="182/70"
                android:textSize="30dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/center_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/secondlefttop"
                android:text="mmHg"
                android:layout_marginTop="30dp"
                android:gravity="start"

                />
            <TextView
                android:id="@+id/bottomLeft_textView_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/center_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/top_textview"
                android:text="High"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintVertical_bias="0.5"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/center_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottomLeft_textView_id"
                android:text="After Meal"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="#9C9A9A"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--        <ProgressBar-->
        <!--            android:id="@+id/progressbar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
        <!--            android:layout_marginHorizontal="20dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            android:indeterminate="true"-->
        <!--            android:progressDrawable="@drawable/for_progressbar"-->
        <!--            />-->

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="366dp"
        android:layout_height="23dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="70dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/for_progressbar"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/for_progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateDuration="20000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!--        app:layout_constraintHorizontal_bias="0.035"-->

<TextView
        android:layout_width="225dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/splash_sub_description"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#cccccc"
        />


</androidx.constraintlayout.widget.ConstraintLayout>